[package]
name = "ostn02_phf"
description = "A PHF map of the OSTN02 grid shifts for use in transforming ETRS89 grid coordinates to OSGB36"
repository = "https://github.com/urschrei/OSTN02_PHF"
documentation = "https://urschrei.github.io/ostn02_phf/"
keywords = ["Geo", "ETRS89", "OSGB36", "OSTN02"]
version = "0.1.7"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "MIT"
readme = "README.md"

# build = "src/build.rs"

[build-dependencies]
phf_codegen = "0.7.12"
rusqlite = "0.6.0"

[dependencies]
phf = "0.7.12"
libc = "0.2.7"

[lib]
name = "ostn02_phf"
crate-type = ["rlib", "dylib", "staticlib"]
