[package]
name = "ostn02_phf"
description = "A PHF map of the OSTN02 grid shifts for use in transforming ETRS89 grid coordinates to OSGB36"
repository = "https://github.com/urschrei/OSTN02_PHF"
documentation = "https://urschrei.github.io/ostn02_phf/"
keywords = ["Geo", "ETRS89", "OSGB36", "OSTN02"]
version = "0.1.12"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "MIT"
readme = "README.md"

# build = "src/build.rs"

[build-dependencies]
phf_codegen = "0.7.14"
rusqlite = "0.6.0"

[dependencies]
phf = "0.7.14"
libc = "0.2.9"

[lib]
name = "ostn02_phf"
crate-type = ["rlib", "dylib"]
